test: 댓글 수 count && 댓글 정보 조회 관련 메소드들 테스트