@@ -6,10 +6,14 @@ import com.sooum.core.domain.card.entity.fontsize.FontSize;
 import com.sooum.core.domain.card.service.PopularFeedService;
 import com.sooum.core.global.auth.interceptor.JwtBlacklistInterceptor;
 import com.sooum.core.global.config.jwt.TokenProvider;
+import com.sooum.core.global.config.mvc.WebMvcConfig;
+import com.sooum.core.global.config.security.SecurityConfig;
 import org.junit.jupiter.api.Test;
+import org.mockito.BDDMockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.data.jpa.mapping.JpaMetamodelMappingContext;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.web.servlet.MockMvc;
@@ -18,17 +22,19 @@ import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
+import static org.mockito.BDDMockito.*;
 import static org.mockito.BDDMockito.any;
 import static org.mockito.BDDMockito.given;
 
 @WebMvcTest(PopularFeedController.class)
 @MockBean(JpaMetamodelMappingContext.class)
 @MockBean(JwtBlacklistInterceptor.class)
+@MockBean(WebMvcConfig.class)
 @MockBean(TokenProvider.class)
+@Import(SecurityConfig.class)
 class PopularFeedControllerTest {
     @Autowired
     MockMvc mockMvc;
@@ -40,7 +46,8 @@ class PopularFeedControllerTest {
     @WithMockUser
     void findHomePopularFeeds() throws Exception{
         /// given
-        given(popularFeedService.findHomePopularFeeds(any(), any(), any())).willReturn(createPopularFeedsDto());
+        List<PopularCardRetrieve> mockResult = List.of(mock(PopularCardRetrieve.class));
+        given(popularFeedService.findHomePopularFeeds(any(), any(), any())).willReturn(mockResult);
 
         // when
         ResultActions resultActions = mockMvc.perform(
@@ -58,7 +65,7 @@ class PopularFeedControllerTest {
     @WithMockUser
     void findEmptyFeed() throws Exception{
         /// given
-        given(popularFeedService.findHomePopularFeeds(any(), any(), any())).willReturn(List.of());
+        given(popularFeedService.findHomePopularFeeds(any(), any(), any())).willReturn(Collections.emptyList());
 
         // when
         ResultActions resultActions = mockMvc.perform(
@@ -68,30 +75,7 @@ class PopularFeedControllerTest {
         );
 
         // then
-        // todo mocking 안되는 버그 수정
-//        resultActions.andExpect(MockMvcResultMatchers.status().isNoContent());
+        resultActions.andExpect(MockMvcResultMatchers.status().isNoContent());
         resultActions.andDo(MockMvcResultHandlers.print());
-    }
-
-    public List<PopularCardRetrieve> createPopularFeedsDto() {
-        ArrayList<PopularCardRetrieve> responses = new ArrayList<>();
-        for (int i = 0; i < 2; i++) {
-            PopularCardRetrieve dto = PopularCardRetrieve.builder()
-                    .id(i)
-                    .content("내용" + i)
-                    .isStory(false)
-                    .backgroundImgUrl(null)
-                    .font(Font.DEFAULT)
-                    .fontSize(FontSize.BIG)
-                    .distance(null)
-                    .createdAt(LocalDateTime.now())
-                    .isLiked(false)
-                    .likeCnt(10)
-                    .isCommentWritten(false)
-                    .commentCnt(10)
-                    .build();
-            responses.add(dto);
-        }
-        return responses;
     }
 }
